# attendance-tracker-email

./: .gitignore  LICENSE  README.md  attendance.py  pyproject.toml  setup.py
attendance-tracker-email/: __init__.py  filetracker.py  requirements.txt
attendance_tracker_email/: attendance.py
attendance_tracker_email.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/attendance_tracker_email/: __init__.py  filetracker.py  main.py
