[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-tracker-email"
version = "0.0.1"
authors = [
  { name="Antony Muriithi Gakuru", email="antony123muriithi@gmail.com" },
],
description = "Tracks the attendance of participants in online events using their emails"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/morehwachege/attendance-tracker-email"
"Bug Tracker" = "https://github.com/morehwachege/attendance-tracker-email/issues"
dependencies = [
    "testresources",
    'pbr',
]